--- a/hello/.xmake/linux/x86_64/xmake.conf
+++ b/hello/.xmake/linux/x86_64/xmake.conf
@@ -1,47 +1,21 @@
 {
     ["_TARGETS"] = 
     {
-        hello = 
-        {
-<<<<<<< HEAD
-            ["__toolname_cc"] = "gcc"
-=======
-            arch = "x86_64"
->>>>>>> c8d03547031f5d35d3359db16e91c7e866408a68
-        ,   ccache = true
-        ,   ["__toolname_ld"] = "gxx"
-        ,   mode = "release"
-        ,   ndk_stdcxx = true
-<<<<<<< HEAD
-        ,   plat = "linux"
-        ,   ld = "/usr/bin/g++"
-        ,   kind = "static"
-        ,   buildir = "build"
-        ,   arch = "x86_64"
-        ,   cc = "/usr/bin/gcc"
-        ,   host = "linux"
-        }
-    ,   test = 
+        test = 
         {
             ["__toolname_cc"] = "gcc"
         ,   ccache = true
         ,   ["__toolname_ld"] = "gxx"
         ,   mode = "release"
         ,   ndk_stdcxx = true
-        ,   plat = "linux"
+        ,   host = "linux"
         ,   ld = "/usr/bin/g++"
-        ,   kind = "static"
-        ,   buildir = "build"
         ,   arch = "x86_64"
-        ,   cc = "/usr/bin/gcc"
-        ,   host = "linux"
-=======
-        ,   host = "linux"
         ,   kind = "static"
+        ,   theme = "default"
+        ,   cc = "/usr/bin/gcc"
         ,   buildir = "build"
         ,   plat = "linux"
-        ,   ld = "/usr/bin/g++"
->>>>>>> c8d03547031f5d35d3359db16e91c7e866408a68
         }
     ,   all = 
         {
@@ -50,13 +24,14 @@
         ,   ["__toolname_ld"] = "gxx"
         ,   mode = "release"
         ,   ndk_stdcxx = true
-        ,   plat = "linux"
         ,   host = "linux"
-        ,   kind = "static"
+        ,   plat = "linux"
         ,   buildir = "build"
+        ,   kind = "static"
+        ,   theme = "default"
         ,   cc = "/usr/bin/gcc"
-        ,   arch = "x86_64"
         ,   ld = "/usr/bin/g++"
+        ,   arch = "x86_64"
         }
     }
 ,   ["__version"] = "2.2.7"
