--- a/motor_controller/.xmake/linux/x86_64/xmake.conf
+++ b/motor_controller/.xmake/linux/x86_64/xmake.conf
@@ -3,41 +3,41 @@
     {
         motor_controller = 
         {
-            host = "linux"
+            plat = "linux"
         ,   ["__toolname_cc"] = "gcc"
-        ,   ld = "/usr/bin/g++"
-        ,   lib = true
-        ,   ["__toolname_ld"] = "gxx"
-        ,   plat = "linux"
-        ,   mode = "release"
-        ,   ndk_stdcxx = true
-        ,   cxx = "/usr/bin/gcc"
-        ,   theme = "default"
-        ,   cc = "/usr/bin/gcc"
-        ,   kind = "static"
-        ,   buildir = "build"
-        ,   arch = "x86_64"
-        ,   ["__toolname_cxx"] = "gcc"
         ,   ccache = true
-        }
-    ,   all = 
-        {
-            ccache = true
-        ,   ["__toolname_cc"] = "gcc"
-        ,   ld = "/usr/bin/g++"
         ,   lib = true
         ,   ["__toolname_ld"] = "gxx"
-        ,   cxx = "/usr/bin/gcc"
+        ,   arch = "x86_64"
         ,   mode = "release"
         ,   ndk_stdcxx = true
         ,   host = "linux"
-        ,   arch = "x86_64"
+        ,   cxx = "/usr/bin/gcc"
+        ,   theme = "default"
+        ,   kind = "static"
+        ,   buildir = "build"
+        ,   cc = "/usr/bin/gcc"
+        ,   ["__toolname_cxx"] = "gcc"
+        ,   ld = "/usr/bin/g++"
+        }
+    ,   all = 
+        {
+            ld = "/usr/bin/g++"
+        ,   ["__toolname_cc"] = "gcc"
+        ,   ccache = true
+        ,   lib = true
+        ,   ["__toolname_ld"] = "gxx"
+        ,   host = "linux"
+        ,   mode = "release"
+        ,   ndk_stdcxx = true
+        ,   plat = "linux"
+        ,   cc = "/usr/bin/gcc"
         ,   buildir = "build"
         ,   kind = "static"
         ,   theme = "default"
-        ,   cc = "/usr/bin/gcc"
+        ,   cxx = "/usr/bin/gcc"
         ,   ["__toolname_cxx"] = "gcc"
-        ,   plat = "linux"
+        ,   arch = "x86_64"
         }
     }
 ,   ["__version"] = "2.2.7"
