--- a/rostopic_demo/.xmake/linux/x86_64/xmake.conf
+++ b/rostopic_demo/.xmake/linux/x86_64/xmake.conf
@@ -3,111 +3,60 @@
     {
         talker = 
         {
-            ["__toolname_cc"] = "gcc"
+            plat = "linux"
+        ,   ["__toolname_cc"] = "gcc"
+        ,   ccache = true
+        ,   lib = true
+        ,   ["__toolname_ld"] = "gxx"
+        ,   arch = "x86_64"
+        ,   mode = "release"
+        ,   ndk_stdcxx = true
+        ,   host = "linux"
+        ,   cc = "/usr/bin/gcc"
+        ,   buildir = "build"
+        ,   kind = "static"
+        ,   theme = "default"
+        ,   cxx = "/usr/bin/gcc"
+        ,   ["__toolname_cxx"] = "gcc"
         ,   ld = "/usr/bin/g++"
-<<<<<<< HEAD
-        ,   test = true
-        ,   ndk_stdcxx = true
-        ,   host = "linux"
-        ,   buildir = "build"
-        ,   ["__toolname_cxx"] = "gcc"
-        ,   small = true
-        ,   arch = "x86_64"
-        ,   lib = true
-        ,   ["__toolname_ld"] = "gxx"
-        ,   mode = "release"
-        ,   cxx = "/usr/bin/gcc"
-        ,   kind = "static"
-        ,   plat = "linux"
-        ,   cc = "/usr/bin/gcc"
-        ,   ccache = true
-=======
-        ,   lib = true
-        ,   ["__toolname_ld"] = "gxx"
-        ,   ccache = true
-        ,   mode = "release"
-        ,   ndk_stdcxx = true
-        ,   host = "linux"
-        ,   plat = "linux"
-        ,   cc = "/usr/bin/gcc"
-        ,   kind = "static"
-        ,   buildir = "build"
-        ,   cxx = "/usr/bin/gcc"
-        ,   ["__toolname_cxx"] = "gcc"
-        ,   arch = "x86_64"
->>>>>>> c8d03547031f5d35d3359db16e91c7e866408a68
         }
     ,   listener = 
         {
-            ["__toolname_cc"] = "gcc"
-        ,   ld = "/usr/bin/g++"
-<<<<<<< HEAD
-        ,   test = true
-        ,   ndk_stdcxx = true
-        ,   host = "linux"
-        ,   buildir = "build"
-        ,   ["__toolname_cxx"] = "gcc"
-        ,   small = true
-        ,   arch = "x86_64"
+            ld = "/usr/bin/g++"
+        ,   ["__toolname_cc"] = "gcc"
+        ,   ccache = true
         ,   lib = true
         ,   ["__toolname_ld"] = "gxx"
-        ,   mode = "release"
-        ,   cc = "/usr/bin/gcc"
-        ,   kind = "static"
-        ,   ccache = true
-        ,   cxx = "/usr/bin/gcc"
-        ,   plat = "linux"
-=======
-        ,   lib = true
-        ,   ["__toolname_ld"] = "gxx"
-        ,   arch = "x86_64"
+        ,   host = "linux"
         ,   mode = "release"
         ,   ndk_stdcxx = true
-        ,   host = "linux"
-        ,   plat = "linux"
+        ,   cc = "/usr/bin/gcc"
         ,   cxx = "/usr/bin/gcc"
+        ,   theme = "default"
         ,   kind = "static"
         ,   buildir = "build"
-        ,   cc = "/usr/bin/gcc"
+        ,   arch = "x86_64"
         ,   ["__toolname_cxx"] = "gcc"
-        ,   ccache = true
->>>>>>> c8d03547031f5d35d3359db16e91c7e866408a68
+        ,   plat = "linux"
         }
     ,   all = 
         {
-            ["__toolname_cc"] = "gcc"
-        ,   ld = "/usr/bin/g++"
-<<<<<<< HEAD
-        ,   test = true
-        ,   ndk_stdcxx = true
-        ,   plat = "linux"
-        ,   buildir = "build"
-        ,   ["__toolname_cxx"] = "gcc"
-        ,   small = true
-        ,   arch = "x86_64"
+            ld = "/usr/bin/g++"
+        ,   ["__toolname_cc"] = "gcc"
+        ,   ccache = true
         ,   lib = true
         ,   ["__toolname_ld"] = "gxx"
-        ,   mode = "release"
-        ,   cc = "/usr/bin/gcc"
-        ,   kind = "static"
-        ,   ccache = true
-        ,   cxx = "/usr/bin/gcc"
         ,   host = "linux"
-=======
-        ,   lib = true
-        ,   ["__toolname_ld"] = "gxx"
-        ,   arch = "x86_64"
         ,   mode = "release"
         ,   ndk_stdcxx = true
-        ,   host = "linux"
         ,   plat = "linux"
         ,   cxx = "/usr/bin/gcc"
+        ,   theme = "default"
         ,   kind = "static"
         ,   buildir = "build"
-        ,   cc = "/usr/bin/gcc"
+        ,   arch = "x86_64"
         ,   ["__toolname_cxx"] = "gcc"
-        ,   ccache = true
->>>>>>> c8d03547031f5d35d3359db16e91c7e866408a68
+        ,   cc = "/usr/bin/gcc"
         }
     }
 ,   ["__version"] = "2.2.7"
