--- a/service_demo/.xmake/linux/x86_64/xmake.conf
+++ b/service_demo/.xmake/linux/x86_64/xmake.conf
@@ -3,55 +3,58 @@
     {
         server = 
         {
-            ["__toolname_cc"] = "gcc"
-        ,   ld = "/usr/bin/g++"
+            plat = "linux"
+        ,   ["__toolname_cc"] = "gcc"
+        ,   ccache = true
         ,   lib = true
         ,   ["__toolname_ld"] = "gxx"
-        ,   ccache = true
+        ,   arch = "x86_64"
         ,   mode = "release"
         ,   ndk_stdcxx = true
         ,   host = "linux"
         ,   cxx = "/usr/bin/gcc"
-        ,   cc = "/usr/bin/gcc"
+        ,   theme = "default"
         ,   kind = "static"
         ,   buildir = "build"
-        ,   plat = "linux"
+        ,   cc = "/usr/bin/gcc"
         ,   ["__toolname_cxx"] = "gcc"
-        ,   arch = "x86_64"
+        ,   ld = "/usr/bin/g++"
         }
     ,   client = 
         {
-            ["__toolname_cc"] = "gcc"
-        ,   ld = "/usr/bin/g++"
+            ld = "/usr/bin/g++"
+        ,   ["__toolname_cc"] = "gcc"
+        ,   ccache = true
         ,   lib = true
         ,   ["__toolname_ld"] = "gxx"
-        ,   arch = "x86_64"
+        ,   host = "linux"
         ,   mode = "release"
         ,   ndk_stdcxx = true
-        ,   host = "linux"
         ,   plat = "linux"
-        ,   cc = "/usr/bin/gcc"
-        ,   kind = "static"
         ,   buildir = "build"
         ,   cxx = "/usr/bin/gcc"
+        ,   kind = "static"
+        ,   theme = "default"
+        ,   arch = "x86_64"
         ,   ["__toolname_cxx"] = "gcc"
-        ,   ccache = true
+        ,   cc = "/usr/bin/gcc"
         }
     ,   all = 
         {
-            ["__toolname_cc"] = "gcc"
+            host = "linux"
+        ,   ["__toolname_cc"] = "gcc"
         ,   ld = "/usr/bin/g++"
-        ,   lib = true
+        ,   lib = false
         ,   ["__toolname_ld"] = "gxx"
-        ,   ccache = true
+        ,   plat = "linux"
         ,   mode = "release"
         ,   ndk_stdcxx = true
-        ,   host = "linux"
-        ,   plat = "linux"
-        ,   cc = "/usr/bin/gcc"
+        ,   cxx = "/usr/bin/gcc"
+        ,   ccache = true
+        ,   theme = "default"
         ,   kind = "static"
         ,   buildir = "build"
-        ,   cxx = "/usr/bin/gcc"
+        ,   cc = "/usr/bin/gcc"
         ,   ["__toolname_cxx"] = "gcc"
         ,   arch = "x86_64"
         }
